# CellularAutomata

./: App.cpp  App.hpp  CMakeLists.txt  Copy_of_hangman_task.ipynb  README.md  main.cpp
